<resources>
    <string name="app_name">VsemSushi</string>
    <string name="logo">Логотип</string>
    <string name="enter_header">Вход</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="save">Сохранить</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="cart">Корзина</string>
    <string name="clear_cart">Очистить корзину</string>
    <string name="checkout">Оформление заказа</string>
    <string name="enter_address">Введите адрес доставки</string>
    <string name="make_order">Оформить заказ</string>
    <string name="thanks_for_order">Спасибо за заказ</string>
    <string name="go_main">Вернуться на главную</string>
    <string name="user_id">ID</string>
    <string name="user_phone">Телефон</string>
    <string name="back">Вернуться</string>
</resources>